<resources>
    <string name="app_name">GPSBeacon</string>
    <string name="reset">reset</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="accuracy">accuracy</string>
    <string name="last_update">last update</string>
    <string name="clearData">Clear data</string>
    <string name="privacyPolicy">By using this app you agree with <a href="https://gps-beaconing.appspot.com/privacy-policy">privacy policy</a></string>
</resources>
