<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="info.safronoff.gpsbeacon.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="shareBtn,longitudeLabel,latitudeLabel,accuracyLabel,lastUpdatedLabel" />

        <ImageView
            android:id="@+id/shareBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_share_black_24dp"
            android:onClick="@{() -> viewmodel.shareClick()}"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/deviceLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.link}"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:autoLink="web"
            tools:text="http://test.test"
            android:textColorLink="@color/blue"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="@id/shareBtn"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/shareBtn"/>

        <TextView
            android:id="@+id/latitudeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.latitude}"
            tools:text="00"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/deviceLink"/>

        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/latitudeTV"/>


        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@id/longitudeTV"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/longitudeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.longitude}"
            tools:text="00"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/latitudeTV" />

        <TextView
            android:id="@+id/accuracyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accuracy"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@id/accuracyTV"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/accuracyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.accuracy}"
            tools:text="00"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/longitudeTV" />


        <TextView
            android:id="@+id/lastUpdatedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_update"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@id/lastUpdatedTV"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/lastUpdatedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.lastUpdate}"
            tools:text="00:00:00"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/accuracyTV" />

        <Button
            android:id="@+id/startBtn"
            android:text="@string/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.startClick()}"
            android:visibility="@{viewmodel.isStarted() ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/stopBtn"
            android:text="@string/stop"
            android:visibility="@{viewmodel.isStarted() ? View.VISIBLE : View.GONE}"
            android:onClick="@{() -> viewmodel.stopClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
